src/main/kotlin/com/example/demongodb/domain/document/error/DocumentNotFoundException.kt
package com.example.demongodb.domain.document.error

import com.example.demongodb.global.error.exception.BusinessException

object DocumentNotFoundException: BusinessException(DocumentErrorCode.DOCUMENT_NOT_FOUND)